# goodbyeVisualiser

./: .gitignore  =1.7.0  README.md  display.py  environment.yaml  pyproject.toml  requirements.txt  run.py
src/goodbyeVisuals/: __init__.py  audio.py  core.py  effects.py  shapes.py
tests/: test_shapes.py
