[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goodbyeVisuals"
version = "0.1.0"
authors = [
    { name = "Adam Loyd Harris", email = "adam.harris95@gmail.com" },
]
description = "A Python package for creating geometric visualizations"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "mypy>=0.950",
]